@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2010, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,6 +24,7 @@
 
 /*
  * @test
+ * @key randomness
  * @modules java.base/jdk.internal.misc
  *
  * @summary converted from VM Testbase vm/mlvm/anonloader/stress/byteMutation.
@@ -31,7 +32,6 @@
  *
  * @library /vmTestbase
  *          /test/lib
- * @run driver jdk.test.lib.FileInstaller . .
  *
  * @comment build test class and indify classes
  * @build vm.mlvm.anonloader.stress.byteMutation.Test
@@ -56,17 +56,14 @@ import vm.share.options.Option;
  * <li>Tries to load such class using:
  *     <ul>
  *       <li>a custom class loader,
- *       <li>{@link sun.misc.Unsafe#defineAnonymousClass}
- *           when {@code -unsafeLoad true} option is passed to the test.
+ *       <li>{@link java.lang.invoke.MethodHandles.Lookup#defineHiddenClass}
+ *           when {@code -hiddenLoad true} option is passed to the test.
  *     </ul>
  * </ol>
  *
  * <p>In most cases the resulting class file is invalid and rejected by
  * the VM verifier. But this test tries to find pathological cases, such
  * as infinite loops during verification or VM crashes.
- *
- * <p>NB: There is a tool to load invalid classes saved by this test.
- * Please see tool documentation at {@link vm.mlvm.tools.LoadClass}
  *
  */
 public class Test extends StressClassLoadingTest {
